[gd_scene load_steps=31 format=2]

[ext_resource path="res://code/main.gd" type="Script" id=1]
[ext_resource path="res://imag/CardsNovos/CardTree.png" type="Texture" id=2]
[ext_resource path="res://imag/BG/Paint.jpg" type="Texture" id=3]
[ext_resource path="res://code/mainmusica.gd" type="Script" id=4]
[ext_resource path="res://music/mainmusica.wav" type="AudioStream" id=5]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_03.png" type="Texture" id=6]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_04.png" type="Texture" id=7]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_01.png" type="Texture" id=8]
[ext_resource path="res://imag/iconeSenado.png" type="Texture" id=9]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_02.png" type="Texture" id=10]
[ext_resource path="res://imag/Main/AnimaTablet/Tela_05.png" type="Texture" id=11]
[ext_resource path="res://imag/Main/Papel.png" type="Texture" id=12]
[ext_resource path="res://Obj/Control.tscn" type="PackedScene" id=13]
[ext_resource path="res://code/papel.gd" type="Script" id=14]
[ext_resource path="res://music/sompapel.mp3" type="AudioStream" id=15]
[ext_resource path="res://imag/Group 1.png" type="Texture" id=16]
[ext_resource path="res://imag/progress.png" type="Texture" id=17]
[ext_resource path="res://imag/Subtract.png" type="Texture" id=18]
[ext_resource path="res://imag/progressCenadao.png" type="Texture" id=19]
[ext_resource path="res://music/btn2.wav" type="AudioStream" id=20]
[ext_resource path="res://code/dialogo.gd" type="Script" id=21]
[ext_resource path="res://imag/Main/AnimaTablet/tabletEsterg.png" type="Texture" id=22]
[ext_resource path="res://imag/iconePopulacao.png" type="Texture" id=23]

[sub_resource type="Animation" id=4]
resource_name = "Fase01"
length = 2.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Titulo_01:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Titulo_01:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Titulo_01:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -118, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Titulo_01:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -24, -0.25, 0, 0.25, 0, 96, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Titulo_01:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.560784, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Titulo_01:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.298039, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Titulo_01:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.105882, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Titulo_01:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("Titulo_01:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fase02"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Titulo_02:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 95 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Titulo_02:rect_scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Titulo_02:rect_scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Titulo_02:modulate:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.392157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Titulo_02:modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.611765, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Titulo_02:modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.588235, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Titulo_02:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/7/type = "value"
tracks/7/path = NodePath("Titulo_02:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fase03"
length = 2.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Titulo_03:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Titulo_03:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 96, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Titulo_03:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.776471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Titulo_03:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.313726, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Titulo_03:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.282353, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Titulo_03:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Titulo_03:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Titulo_03:rect_scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("Titulo_03:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 369.5, 0 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Titulo_01:rect_size:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 288, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Titulo_01:rect_size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 36, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Titulo_01:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("Titulo_01:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0.2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("Titulo_01:rect_position:x")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 357, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("Titulo_01:rect_position:y")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 96, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("Titulo_01:modulate:r")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("Titulo_01:modulate:g")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("Titulo_01:modulate:b")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("Titulo_01:modulate:a")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/11/type = "value"
tracks/11/path = NodePath("Titulo_02:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("Titulo_02:rect_scale:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("Titulo_02:rect_scale:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("Titulo_02:modulate:r")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 0.392157, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("Titulo_02:modulate:g")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0.611765, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("Titulo_02:modulate:b")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 0.588235, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("Titulo_02:modulate:a")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/18/type = "bezier"
tracks/18/path = NodePath("Titulo_03:rect_scale:x")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/19/type = "bezier"
tracks/19/path = NodePath("Titulo_03:rect_scale:y")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/20/type = "bezier"
tracks/20/path = NodePath("Titulo_03:modulate:r")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"points": PoolRealArray( 0.776471, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/21/type = "bezier"
tracks/21/path = NodePath("Titulo_03:modulate:g")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"points": PoolRealArray( 0.313726, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/22/type = "bezier"
tracks/22/path = NodePath("Titulo_03:modulate:b")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"points": PoolRealArray( 0.282353, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/23/type = "bezier"
tracks/23/path = NodePath("Titulo_03:modulate:a")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/24/type = "bezier"
tracks/24/path = NodePath("Titulo_03:rect_position:x")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/25/type = "bezier"
tracks/25/path = NodePath("Titulo_03:rect_position:y")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"points": PoolRealArray( 96, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/26/type = "value"
tracks/26/path = NodePath("Titulo_03:visible")
tracks/26/interp = 1
tracks/26/loop_wrap = true
tracks/26/imported = false
tracks/26/enabled = true
tracks/26/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/27/type = "value"
tracks/27/path = NodePath("Titulo_02:visible")
tracks/27/interp = 1
tracks/27/loop_wrap = true
tracks/27/imported = false
tracks/27/enabled = true
tracks/27/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/28/type = "value"
tracks/28/path = NodePath("Titulo_01:visible")
tracks/28/interp = 1
tracks/28/loop_wrap = true
tracks/28/imported = false
tracks/28/enabled = true
tracks/28/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://font/Oswald-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": false,
"name": "mensagem",
"speed": 8.0
} ]

[node name="main" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 126.0 ]
}

[node name="HUD2" type="Control" parent="."]
margin_left = -2.0
margin_top = 1.0
margin_right = 1029.0
margin_bottom = 592.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="HUD2"]
position = Vector2( 879, 23 )
scale = Vector2( 0.5, 0.5 )
z_index = 6

[node name="IconePopulacao" type="Sprite" parent="HUD2/Node2D"]
position = Vector2( 100, 46 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 23 )

[node name="IconeSenado" type="Sprite" parent="HUD2/Node2D"]
position = Vector2( 172, 44 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 9 )

[node name="Pop" type="TextureProgress" parent="HUD2/Node2D"]
margin_left = 68.0
margin_top = 86.0
margin_right = 123.0
margin_bottom = 357.0
max_value = 500.0
step = 10.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 18 )
texture_progress = ExtResource( 17 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Congra" type="TextureProgress" parent="HUD2/Node2D"]
margin_left = 146.0
margin_top = 86.0
margin_right = 201.0
margin_bottom = 357.0
max_value = 500.0
step = 10.0
texture_under = ExtResource( 16 )
texture_over = ExtResource( 18 )
texture_progress = ExtResource( 19 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Control" parent="."]
visible = false
margin_left = 369.5
margin_right = 1396.5
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimaTitulo" type="AnimationPlayer" parent="HUD"]
anims/Fase01 = SubResource( 4 )
anims/Fase02 = SubResource( 5 )
anims/Fase03 = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="Titulo_02" type="Label" parent="HUD"]
modulate = Color( 0.392157, 0.611765, 0.588235, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -513.5
margin_right = -225.5
margin_bottom = 36.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
text = "PARTE 2 - QUESTÃO AMBIENTAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo_03" type="Label" parent="HUD"]
modulate = Color( 0.776471, 0.313726, 0.282353, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -513.5
margin_top = 96.0
margin_right = -128.5
margin_bottom = 132.0
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 3 )
text = "PARTE 3 - CONSTRUÇÃO DA OBRA PÚBLICA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo_01" type="Label" parent="HUD"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -156.5
margin_top = 96.0
margin_right = 131.5
margin_bottom = 132.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 149, 19 )
custom_fonts/font = SubResource( 3 )
text = "PARTE 1 - ORÇAMENTO PÚBLICO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chamadas" type="Sprite" parent="."]
visible = false
position = Vector2( 504.13, 259 )
z_index = 8
texture = ExtResource( 2 )
hframes = 3
vframes = 12

[node name="BG" type="Sprite" parent="."]
position = Vector2( 514, 300.312 )
z_index = -2
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="BTN" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Papel" type="Sprite" parent="BTN"]
position = Vector2( 617, 464 )
z_index = -2
texture = ExtResource( 12 )
hframes = 5
frame = 1

[node name="PapelArea" type="Control" parent="BTN/Papel"]
anchor_left = 0.057
anchor_top = 0.142
anchor_right = 0.905
anchor_bottom = 0.858
margin_left = -39.503
margin_top = -47.49
margin_right = -39.495
margin_bottom = -47.51
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tablet2" type="AnimatedSprite" parent="BTN"]
position = Vector2( 365.75, 485.5 )
scale = Vector2( 0.954545, 0.954545 )
z_index = -2
frames = SubResource( 1 )
animation = "mensagem"
frame = 5
playing = true

[node name="TabletArea" type="Control" parent="BTN/Tablet2"]
anchor_left = 0.015
anchor_top = 0.273
anchor_right = 0.955
anchor_bottom = 0.844
margin_left = -49.485
margin_top = -47.018
margin_right = -49.545
margin_bottom = -24.704
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabletView" type="Sprite" parent="BTN/Tablet2"]
position = Vector2( 156.357, -212.143 )
scale = Vector2( 1.56958, 1.56958 )
texture = ExtResource( 22 )

[node name="Positivo" type="Button" parent="BTN"]
anchor_left = 0.32
anchor_top = 0.658
anchor_right = 0.462
anchor_bottom = 0.738
margin_left = 0.319977
margin_top = 0.199982
margin_right = -8.08801
margin_bottom = 0.199982
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negativo" type="Button" parent="BTN"]
anchor_left = 0.528
anchor_top = 0.658
anchor_right = 0.665
anchor_bottom = 0.738
margin_left = 0.328003
margin_top = 0.200012
margin_right = 6.03998
margin_bottom = 0.199982
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consulta" type="Button" parent="BTN"]
anchor_left = 0.776
anchor_top = 0.845
anchor_right = 0.917
anchor_bottom = 0.912
margin_left = 0.375977
margin_right = -72.0081
margin_bottom = -20.132
rect_scale = Vector2( 2, 2 )
text = "Proximo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="Button" parent="BTN"]
anchor_left = 0.533
anchor_top = 0.658
anchor_right = 0.666
anchor_bottom = 0.733
margin_left = 0.207947
margin_top = 0.199982
margin_right = 0.0159912
margin_bottom = 0.199982
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="Button" parent="BTN"]
anchor_left = 0.322
anchor_top = 0.658
anchor_right = 0.453
anchor_bottom = 0.737
margin_left = 0.272003
margin_top = 0.199982
margin_right = 0.128021
margin_bottom = -0.200043
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="." instance=ExtResource( 13 )]
margin_left = 154.0
margin_top = 282.0
margin_right = 929.0
margin_bottom = 474.0

[node name="Info" type="Control" parent="."]
margin_left = 519.0
margin_top = 247.0
margin_right = 688.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info2" type="Control" parent="."]
margin_right = 124.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainmusica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
script = ExtResource( 4 )

[node name="papel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
script = ExtResource( 14 )

[node name="dialogo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
script = ExtResource( 21 )

[connection signal="mouse_entered" from="BTN/Papel/PapelArea" to="." method="_on_PapelArea_mouse_entered"]
[connection signal="mouse_entered" from="BTN/Tablet2/TabletArea" to="." method="_on_Tablet_mouse_entered"]
[connection signal="button_up" from="BTN/Positivo" to="." method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Positivo" to="papel" method="_on_Positivo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="." method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Negativo" to="papel" method="_on_Negativo_button_up"]
[connection signal="button_up" from="BTN/Consulta" to="." method="_on_Consulta_button_up"]
[connection signal="button_up" from="BTN/Consulta" to="dialogo" method="_on_Consulta_button_up"]
[connection signal="button_down" from="BTN/B" to="." method="_on_B_button_down"]
[connection signal="button_down" from="BTN/A" to="." method="_on_A_button_down"]
[connection signal="button_down" from="BTN/A" to="papel" method="_on_A_button_down"]
[connection signal="mouse_entered" from="Info" to="." method="_on_Info_mouse_entered"]
[connection signal="mouse_exited" from="Info" to="." method="_on_Info_mouse_exited"]
[connection signal="mouse_entered" from="Info2" to="." method="_on_Info2_mouse_entered"]
[connection signal="mouse_exited" from="Info2" to="." method="_on_Info2_mouse_exited"]
